--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                 <li class="nav-item">
                     <a class="nav-link " href="precourse_assignment.html">Rcompetency</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link " href="16sanalysis_workshop/16sworkshop/book/index.html">Workshop Notes</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link " href="contact.html">Contact</a>
                 </li>
@@ -86,7 +86,7 @@
 <!--cover section slider -->
 <section id="home" class="home-cover">
     <div class="cover_slider owl-carousel owl-theme">
-        <div class="cover_item" style="background: url('https://imc.ucalgary.ca/sites/default/files/styles/ucws_hero_cta_desktop_tall/public/2019-11/Microbiome_0.jpg');">
+        <div class="cover_item" style="background: url('assets/img/Microbiome_0.jpg');">
              <div class="slider_content">
                 <div class="slider-content-inner">
                     <div class="container">
@@ -94,9 +94,9 @@
                             <h2 class="cover-title">
                               16s sequencing Analysis
                             </h2>
-                            <strong class="cover-xl-text">Workshop</strong>
+                            <h3 class="cover-xl-text">Workshop</h3>
                             <p class="cover-date">
-                                7-9 October 2019  - Calgary, Alberta.
+                                18-20 May 2020  - Calgary, Alberta.
                             </p>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfdTxYlmmjRdnqkyrNdtH8Skn-Q0vRvU9MKSl2oMUDeeDCdfg/viewform" class=" btn btn-primary btn-rounded" >
                                 Register Now
@@ -168,7 +168,7 @@
                             DATE
                         </h5>
                         <p>
-                            7-9 October 2019
+                            18-20 May 2020
                         </p>
                     </div>
                 </div>
@@ -182,7 +182,7 @@
                             location
                         </h5>
                         <p>
-                            Foothills Campus, University of Calgary, Calgary AB.
+                            Online via video conferencing
                         </p>
                     </div>
                 </div>
@@ -300,7 +300,7 @@ How to design such an experiments </li>
                     <div class="content">
                         <h4>Prerequisites </h4>
                         <p>
-                            Ability to do basic R programming is required to take this course. If you don't have R experience, please take our <a href="https://alanaschick.github.io/Rbootcamp2019/index.html">Rbootcamp course </a> offered in August 2019.
+                            Ability to do basic R programming is required to take this course. Please contact the instructors if you want to learn R.
                         </p>
 
                     </div>
@@ -346,4 +346,3 @@ How to design such an experiments </li>
 <script src="assets/js/main.js"></script>
 </body>
 </html>
->>>>>>> parent of a13bc0f... added precourse assignment link
