--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             </h2>
                             <h3 class="cover-xl-text">Workshop</h3>
                             <p class="cover-date">
-                                18-20 May 2020  - Calgary, Alberta.
+                                24-25 May 2020  - Online Course.
                             </p>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSeoFCRSzUBaiXsaUG71RJrT4WUMSyYqn5cGZxiBaDYqLrs15Q/viewform" class=" btn btn-primary btn-rounded" >
                                 Register Now
@@ -168,7 +168,7 @@
                             DATE
                         </h5>
                         <p>
-                            18-20 May 2020
+                            24-25 May 2020
                         </p>
                     </div>
                 </div>
