--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-6">
                 <p>
-                  This is a three day intensive workshop to provide attendees hands on experience on doing 16s rRNA sequencing analysis using R. While majority of teaching will be in R, we will also discuss best practices, study design and teach basics of unix tools needed to start an analysis from raw fastq files
+                  This is a two day intensive workshop to provide attendees hands on experience on doing 16s rRNA sequencing analysis using R. While majority of teaching will be in R, we will also discuss best practices, study design and teach basics of unix tools needed to start an analysis from raw fastq files
 . </p>
 <p>A rough overview of the topics covered is as follows: </p>
 <li>
