--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ How to design such an experiments </li>
                     <div class="content">
                         <h4 id ="inst"> Instructors</h4>
                         <p>
-                            Dr. Hena R. Ramay and Dr. Alana Schick, both  are experienced bioinformaticians at the International Microbiome Centre.
+                            Dr. Hena R. Ramay is an experienced bioinformaticians at the International Microbiome Centre.
                         </p>
                         <!-- <a href="#">read more</a> -->
                     </div>
@@ -287,7 +287,7 @@ How to design such an experiments </li>
                     <div class="content">
                         <h4>Workshop</h4>
                         <p>
-                            You will have 3 days of hands on experience with a test dataset. Starting from raw read files, we will walk through each step one by one.
+                            You will have 2 days of hands on experience with a test dataset. Starting from raw read files, we will walk through each step one by one.
                         </p>
                         <!-- <a href="#">read more</a> -->
                     </div>
