--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             </h2>
                             <h3 class="cover-xl-text">Workshop</h3>
                             <p class="cover-date">
-                                25-26 May 2020  - Online Course.
+                              June 15-16 & 18-19    - Online
                             </p>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSeoFCRSzUBaiXsaUG71RJrT4WUMSyYqn5cGZxiBaDYqLrs15Q/viewform" class=" btn btn-primary btn-rounded" >
                                 Register Now
@@ -168,7 +168,7 @@
                             DATE
                         </h5>
                         <p>
-                            25-26 May 2020
+                            There are two different offerings of this workshop on June 15-16 & June 18-19. Once you register you will be notified about the session you are enrolled in.
                         </p>
                     </div>
                 </div>
@@ -211,7 +211,8 @@
                             Fees
                         </h5>
                         <p>
-                          $250
+                          Internal participants: $250
+                          External participants: $500
                         </p>
                     </div>
                 </div>
