--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <!-- ========== Meta Tags ========== -->
     <meta charset="UTF-8">
-    <meta name="description" content="Evento -Event Html Template">
-    <meta name="keywords" content="Evento , Event , Html, Template">
+    <meta name="description" content="IMC workshops">
+    <meta name="keywords" content="Microbiome, 16s, rrna, R">
     <meta name="author" content="ColorLib">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- ========== Title ========== -->
