--- a/16sanalysis_workshop/16sworkshop/book/index.html
+++ b/16sanalysis_workshop/16sworkshop/book/index.html
@@ -32,7 +32,7 @@
   
   
 
-<link rel="next" href="introduction-1.html"/>
+<link rel="next" href="basic-information.html"/>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -137,9 +137,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#workshop-schedule"><i class="fa fa-check"></i><b>1.1</b> Workshop Schedule</a></li>
 <li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#important-links"><i class="fa fa-check"></i><b>1.2</b> Important links</a></li>
 </ul></li>
-<li class="chapter" data-level="2" data-path="introduction-1.html"><a href="introduction-1.html"><i class="fa fa-check"></i><b>2</b> Introduction</a><ul>
-<li class="chapter" data-level="2.1" data-path="introduction-1.html"><a href="introduction-1.html#what-are-we-trying-to-achieve"><i class="fa fa-check"></i><b>2.1</b> What are we trying to achieve</a></li>
-<li class="chapter" data-level="2.2" data-path="introduction-1.html"><a href="introduction-1.html#basics-background"><i class="fa fa-check"></i><b>2.2</b> Basics &amp; Background</a></li>
+<li class="chapter" data-level="2" data-path="basic-information.html"><a href="basic-information.html"><i class="fa fa-check"></i><b>2</b> Basic Information</a><ul>
+<li class="chapter" data-level="2.1" data-path="basic-information.html"><a href="basic-information.html#what-are-we-trying-to-achieve"><i class="fa fa-check"></i><b>2.1</b> What are we trying to achieve</a></li>
+<li class="chapter" data-level="2.2" data-path="basic-information.html"><a href="basic-information.html#basics-background"><i class="fa fa-check"></i><b>2.2</b> Basics &amp; Background</a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="primer-removal.html"><a href="primer-removal.html"><i class="fa fa-check"></i><b>3</b> Primer Removal</a><ul>
 <li class="chapter" data-level="3.1" data-path="primer-removal.html"><a href="primer-removal.html#cutadapt"><i class="fa fa-check"></i><b>3.1</b> CutAdapt</a><ul>
@@ -235,7 +235,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
         </div>
       </div>
 
-<a href="introduction-1.html" class="navigation navigation-next navigation-unique" aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="basic-information.html" class="navigation navigation-next navigation-unique" aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
