--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <li class="nav-item">
                     <a class="nav-link " href="precourse_assignment.html">Rcompetency</a>
                 </li>
-                <!-- <li class="nav-item">
+                <<li class="nav-item">
                     <a class="nav-link " href="16sanalysis_workshop/16sworkshop/book/index.html">Workshop Notes</a>
                 </li> -->
                 <li class="nav-item">
