--- a/16sanalysis_workshop/16sworkshop/book/index.html
+++ b/16sanalysis_workshop/16sworkshop/book/index.html
@@ -209,12 +209,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li>10:30 - 10:45 am Break</li>
 <li>10:45 - 12 Generate sequence table and remove Chimeras</li>
 <li>12 - 1 pm Lunch break</li>
-<li>1- 3 pm Taxonomy explanation + assign your sequences. If time permits, make a phyloseq object</li>
-</ul></li>
-<li>Day3
-<ul>
-<li>9-10:30 am Using a phyloseq object to calculate alpha and beta diversity</li>
-<li>10:30 on wards we will use a real world dataset to re-do what we have learned here</li>
+<li>1 - 2 pm Taxonomy explanation + assign your sequences. If time permits, make a phyloseq object</li>
+<li>2 - 4 pm on wards we will use a real world dataset to re-do what we have learned here</li>
 </ul></li>
 </ul>
 </div>
