--- a/16sanalysis_workshop/16sworkshop/book/what-next.html
+++ b/16sanalysis_workshop/16sworkshop/book/what-next.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Hena R. Ramay" />
 
 
-<meta name="date" content="2020-06-15" />
+<meta name="date" content="2020-06-16" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -155,6 +155,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="4.1.3" data-path="dada2.html"><a href="dada2.html#inspect-read-quality-profiles"><i class="fa fa-check"></i><b>4.1.3</b> Inspect read quality profiles</a></li>
 <li class="chapter" data-level="4.1.4" data-path="dada2.html"><a href="dada2.html#lets-make-plots-to-look-at-the-quality-for-multiple-files"><i class="fa fa-check"></i><b>4.1.4</b> Lets make plots to look at the quality for multiple files</a></li>
 </ul></li>
+<li class="chapter" data-level="4.2" data-path="dada2.html"><a href="dada2.html#some-tips"><i class="fa fa-check"></i><b>4.2</b> Some tips:</a></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="day-two.html"><a href="day-two.html"><i class="fa fa-check"></i><b>5</b> Day Two</a><ul>
 <li class="chapter" data-level="5.1" data-path="day-two.html"><a href="day-two.html#main-concepts-to-be-discussed"><i class="fa fa-check"></i><b>5.1</b> Main concepts to be discussed:</a></li>
@@ -184,6 +185,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
             <section class="normal" id="section-">
 <div id="what-next" class="section level1">
 <h1><span class="header-section-number">7</span> What Next?</h1>
+<p>What you have learnt so far is just the beginging!! There is a lot more ot learn and do.</p>
+<p>For example, after looking at beta diversity, you can also look at differential abundance to see which taxa are different in each treatment group or over time.</p>
+<p>Most commonly used methods for doing this is <a href="https://bioconductor.org/packages/release/bioc/html/DESeq2.html">deseq2</a> and a new one is <a href="https://github.com/bryandmartin/corncob/">corncob</a>. Before using them, please read the papers carefully to know the limitations and correct usage of these pacakages.</p>
+<p>Some people also try to do functional analaysis with 16s data and for this <a href="https://github.com/picrust/picrust2/wiki">PICRUST2</a> pacakge is usually used.</p>
 
 </div>
             </section>
