--- a/16sanalysis_workshop/16sworkshop/book/dada2.html
+++ b/16sanalysis_workshop/16sworkshop/book/dada2.html
@@ -161,7 +161,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="5.1" data-path="day-two.html"><a href="day-two.html#main-concepts-to-be-discussed"><i class="fa fa-check"></i><b>5.1</b> Main concepts to be discussed:</a></li>
 <li class="chapter" data-level="5.2" data-path="day-two.html"><a href="day-two.html#alpha-beta-diversity"><i class="fa fa-check"></i><b>5.2</b> Alpha &amp; beta Diversity</a></li>
 </ul></li>
-<li class="chapter" data-level="6" data-path="summary.html"><a href="summary.html"><i class="fa fa-check"></i><b>6</b> Summary</a></li>
+<li class="chapter" data-level="6" data-path="project.html"><a href="project.html"><i class="fa fa-check"></i><b>6</b> Project</a></li>
 <li class="chapter" data-level="7" data-path="what-next.html"><a href="what-next.html"><i class="fa fa-check"></i><b>7</b> What Next?</a></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
