fix link to data

--- a/16sanalysis_workshop/16sworkshop/book/project.html
+++ b/16sanalysis_workshop/16sworkshop/book/project.html
@@ -131,7 +131,7 @@
 <h1><span class="header-section-number">6</span> Project</h1>
 <div id="setup" class="section level2">
 <h2><span class="header-section-number">6.1</span> Setup</h2>
-<p>Please download the raw data <a href="project_files/raw_data.zip">here</a>.</p>
+<p>Please download the raw data <a href="https://www.dropbox.com/s/7sd7ipsswqcjxxj/raw_data.zip?dl=0">here</a>.</p>
 <p>These samples are from a study looking at the effect of a prebiotic on the gut microbiota of children with type 1 diabetes. To invesigate this, the researchers took samples at three timepoints (baseline, 3 months, and 6 months) and sequenced the <strong>V3-V4</strong> region of the 16S rRNA gene.</p>
 </div>
 <div id="task-1" class="section level2">
