--- a/16sanalysis_workshop/16sworkshop/book/project.html
+++ b/16sanalysis_workshop/16sworkshop/book/project.html
@@ -175,8 +175,8 @@
 <h2><span class="header-section-number">6.3</span> Task 2</h2>
 <p>Use the dada2 pipeline to generate a table of ASVs and a taxonomy table.</p>
 <ol style="list-style-type: decimal">
-<li>Read the names of the <strong>primer removed</strong> fastq files into R and create a list of sample names.</li>
 <li>Plot quality profiles of the reads for all samples. Save these as pdf files.</li>
+<li>Try a couple of sets of filtering params and determine the best choice.</li>
 <li>Filter and trim the data and generate the quality plots again. Save these as well.</li>
 <li>Learn the error rates and visually inspect the estimated error rates.</li>
 <li>Infer samples.</li>
