--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             </h2>
                             <h3 class="cover-xl-text">Workshop</h3>
                             <p class="cover-date">
-                              June 15-16 & 18-19    - Online
+                              November 1-2    - Online
                             </p>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSeoFCRSzUBaiXsaUG71RJrT4WUMSyYqn5cGZxiBaDYqLrs15Q/viewform" class=" btn btn-primary btn-rounded" >
                                 Register Now
