--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="ColorLib">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- ========== Title ========== -->
-    <title> Evento - Event Html Template</title>
+    <title> IMCBINF</title>
     <!-- ========== Favicon Ico ========== -->
     <!--<link rel="icon" href="fav.ico">-->
     <!-- ========== STYLESHEETS ========== -->
@@ -197,7 +197,7 @@
                         </h5>
                         <p>
                             Dr. Hena R. Ramay &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
-                            Dr. Alana Schick
+                            Sahar Bagheri
                         </p>
                     </div>
                 </div>
