--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                             <p class="cover-date">
                               October 3-5    - Online
                             </p>
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeoFCRSzUBaiXsaUG71RJrT4WUMSyYqn5cGZxiBaDYqLrs15Q/viewform" class=" btn btn-primary btn-rounded" >
+                            <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSeoFCRSzUBaiXsaUG71RJrT4WUMSyYqn5cGZxiBaDYqLrs15Q/viewform" class=" btn btn-primary btn-rounded" >
                                 Register Now
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
