--- a/16sanalysis_workshop/16sworkshop/book/what-next.html
+++ b/16sanalysis_workshop/16sworkshop/book/what-next.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Hena R. Ramay" />
 
 
-<meta name="date" content="2022-09-30" />
+<meta name="date" content="2022-10-01" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -158,7 +158,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li><a href="dada2.html#dada2" id="toc-dada2"><span class="toc-section-number">4</span> DADA2</a>
 <ul>
-<li><a href="dada2.html#dada2-pipeline-v1.2" id="toc-dada2-pipeline-v1.2"><span class="toc-section-number">4.1</span> DADA2 pipeline (v1.2)</a>
+<li><a href="dada2.html#dada2-pipeline-v1.18" id="toc-dada2-pipeline-v1.18"><span class="toc-section-number">4.1</span> DADA2 pipeline (v1.18)</a>
 <ul>
 <li><a href="dada2.html#data-for-the-tutorial" id="toc-data-for-the-tutorial"><span class="toc-section-number">4.1.1</span> Data for the tutorial</a></li>
 <li><a href="dada2.html#getting-ready-load-packages-and-get-file-list" id="toc-getting-ready-load-packages-and-get-file-list"><span class="toc-section-number">4.1.2</span> Getting ready ( load packages and get file list)</a></li>
@@ -167,10 +167,15 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li><a href="dada2.html#some-tips" id="toc-some-tips"><span class="toc-section-number">4.2</span> Some tips:</a></li>
 </ul></li>
-<li><a href="day-two.html#day-two" id="toc-day-two"><span class="toc-section-number">5</span> Day Two</a>
+<li><a href="downstream-analysis.html#downstream-analysis" id="toc-downstream-analysis"><span class="toc-section-number">5</span> Downstream Analysis</a>
 <ul>
-<li><a href="day-two.html#main-concepts-to-be-discussed" id="toc-main-concepts-to-be-discussed"><span class="toc-section-number">5.1</span> Main concepts to be discussed:</a></li>
-<li><a href="day-two.html#alpha-beta-diversity" id="toc-alpha-beta-diversity"><span class="toc-section-number">5.2</span> Alpha &amp; beta Diversity</a></li>
+<li><a href="downstream-analysis.html#phyloseq" id="toc-phyloseq"><span class="toc-section-number">5.1</span> Phyloseq</a></li>
+<li><a href="downstream-analysis.html#alpha-diversity" id="toc-alpha-diversity"><span class="toc-section-number">5.2</span> Alpha Diversity</a></li>
+<li><a href="downstream-analysis.html#beta-diversity" id="toc-beta-diversity"><span class="toc-section-number">5.3</span> Beta Diversity</a></li>
+<li><a href="downstream-analysis.html#differential-abundance-analysis" id="toc-differential-abundance-analysis"><span class="toc-section-number">5.4</span> Differential Abundance Analysis</a>
+<ul>
+<li><a href="downstream-analysis.html#deseq2" id="toc-deseq2"><span class="toc-section-number">5.4.1</span> DESEQ2</a></li>
+</ul></li>
 </ul></li>
 <li><a href="project.html#project" id="toc-project"><span class="toc-section-number">6</span> Project</a>
 <ul>
